--- a/src/styles/helpers/_variables.scss
+++ b/src/styles/helpers/_variables.scss
@@ -2,8 +2,8 @@
 $colours: (
 		black: #000,
 		white: #fff,
-		accent: #ffaa85,
-		accent-dark: #b3315f,
+		primary: #352f5b,
+		primary-dark: #423a6f,
 		grey: #3b4252,
 		grey-dark: #242830,
 		grey-light: #f8f8f8
